    {^} No [NOT SET] message if site is set to permdown & rename to [SECTION NOT SET] (#108)
    {^} Re-written backup unit code, supporting old options (skipfiles, backup_dir) and includes all .db files in backup (#134)
    {^} Announce old + renamed groupname when check with renamed_group_checker was positive
    {^} Disabled all fake checking for sitepres
    {^} Better input checks and more output for !setoffset, !pretimemode, !pretimemode2 and !addpremode
    {^} No need to !setdown before !setpermdown (#108)
    {^} !sslmethod checks if valid SSL method + shows which one is used
    {^} Removed warning when "section not found" for complete & nuke announce (#117)
    {^} Some TV Shows weren't detected as STV from IMDb fetch
    {^} Improvement of autodirlist announces
    {^} MVID Year regex changed from \-(\d{4})\- to \-((19|20)\d{2})\-
    {^} PermDown check on all irc commands with sitename = '*', means no setting changing for PermDown sites when using '*'
    {^} For all TMP3Release Sections Genre will also be parsed on bot announce (#114)                                                                  ---- guess still no drop on mp3genre rule if not found ----
    {^} Update to latest LibTar 2.1.2
    {^} Several improvements for tags (COMPLETE/INCOMPLETE detection):
        - no more constant regexp initialization/freeing; instead using an unique one at startup (much faster!)
        - Added locking/unlocking on regexp instances to avoid access exceptions on heavy load
    {^} languagebase.slftp gets automatically renamed to slftp.languagebase (#111)
    {^} some improvements to !site output (Linebreaks, more text for pretime)
    {^} Changed irc "Too few parameters" errors with better ones
    {^} Added additionnal infos to "Dirlist added" messages
    {^} Color a site if it was stopped due to dirlist gave up in [STATS] announce + Output seconds for [EMPTY|INCOMPLETE] announce